--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="static/style.css">
     <title>BOT AÇAI</title>
 </head>
 
@@ -49,7 +49,7 @@
         <li>#sucessonoaçai</li>
         <li>#futurodoaçai</li>
       </ul>
-      <video src="../static/rodape.mp4" autoplay muted loop></video>
+      <video src="static/rodape.mp4" autoplay muted loop></video>
 
     </footer>
   </body>
