--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="static/logo Acai.png" type="image/x-icon">
     <link rel="stylesheet" href="static/style.css">
     <title>BOT AÇAI</title>
 </head>
 
 <body>
     <header>
+    <div class="flex" style="margin: auto; max-width: 300px;">
+      <img id="logoAcai" src="static/logo Acai.png" alt="">
       <h1>Açaibot</h1>
+    </div>
       <h2>Revolucione seu negócio de açaí com atendimento 24/7 e explosão nas vendas!</h2>
     </header>
     <section class="problema">
@@ -38,7 +42,10 @@
     <section class="chamada">
       <h2>O Açaibot é a chave para o sucesso do seu negócio de açaí!</h2>
       <p>Comece agora mesmo a construir a experiência de atendimento que seus clientes merecem e dispare suas vendas!</p>
-      <a href="https://infoprodutos.org/açaibot">Acesse o site da Infoprodutos.org e explore todas as vantagens do Açaibot!</a>
+<div class="flex">
+  <a href="https://infoprodutos.org/açaibot">Acesse o site da Infoprodutos.org e explore todas as vantagens do Açaibot!</a>
+  <img id="logoAcai" src="static/logo Acai.png" alt="">
+</div>
     </section>
     <footer>
       <p>Açaibot: atendimento impecável, vendas em alta e o futuro do seu negócio de açaí!</p>
@@ -50,7 +57,6 @@
         <li>#futurodoaçai</li>
       </ul>
       <video src="static/rodape.mp4" autoplay muted loop></video>
-
     </footer>
   </body>
 
