--- a/index.html
+++ b/index.html
@@ -2,62 +2,117 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="static/logo Acai.png" type="image/x-icon">
-    <link rel="stylesheet" href="static/style.css">
-    <title>BOT AÇAI</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="static/logo Acai.png" type="image/x-icon">
+  <link rel="stylesheet" href="static/style.css">
+  <title>BOT AÇAI</title>
 </head>
 
 <body>
-    <header>
-    <div class="flex" style="margin: auto; max-width: 300px;">
-      <img id="logoAcai" src="static/logo Acai.png" alt="">
-      <h1>Açaibot</h1>
+  <header>
+    <img id="logoAcai" src="static/logo Acai.png" alt="">
+    <h3>Açaibot</h3>
+    <div class="flex-mobile" style="margin: auto;">
+      <div>
+        <h3 style="font-size: xx-large;">Revolucione seu negócio de açaí com atendimento 24/7 e explosão nas vendas!
+        </h3>
+      </div>
+      <div style="max-width: 500px;">
+        <h1>Teste o AÇAI BOT sem pagar nada</h1>
+        <p>Faça o seu cadastro para testar a Anota AI</p>
+        <form action="#">
+         <ul>
+          <li>
+            <label for="nome">Nome:
+            <input type="text" id="nome" name="nome" placeholder="Digite seu nome">
+          </label>
+          </li>
+          <li>
+            <label for="email">Email:
+            <input type="email" id="email" name="email" placeholder="Digite seu email">
+          </label>
+          </li>
+          <li>
+            <label for="celular">Celular:
+            <input type="tel" id="celular" name="celular" placeholder="Digite seu celular">
+          </label>
+          </li>
+          <li>
+            <label for="nome_delivery">Nome do seu delivery:
+            <input type="text" id="nome_delivery" name="nome_delivery" placeholder="Digite o nome do seu delivery">
+          </label>
+          </li>
+          <li>
+            <label for="quantidade_pedidos">Quantidade de pedidos por dia:
+            <select id="quantidade_pedidos" name="quantidade_pedidos">
+              <option value="menos_10">Menos de 10</option>
+              <option value="mais_10">Mais de 10</option>
+            </select>
+          </label>
+          </li>
+          <label for="computador">Já tem computador ou notebook?
+            <input type="radio" id="computador_sim" name="computador" value="sim" checked> Sim
+            <input type="radio" id="computador_nao" name="computador" value="nao"> Não
+          </label>
+         </ul>
+          <button type="submit">Enviar</button>
+        </form>
+      </div>
     </div>
-      <h2>Revolucione seu negócio de açaí com atendimento 24/7 e explosão nas vendas!</h2>
-    </header>
-    <section class="problema">
-      <h2>Cansado de perder vendas por falta de tempo para atender seus clientes?</h2>
-      <p>O Açaibot é a solução definitiva para você! A plataforma completa que automatiza seu atendimento via WhatsApp, liberando seu tempo para focar no que realmente importa: expandir seu negócio de açaí!</p>
-    </section>
-    <section class="beneficios">
-      <h3>Com o Açaibot, você garante:</h3>
-      <ul>
-        <li>**Atendimento 24/7:** Seus clientes são atendidos instantaneamente, a qualquer hora do dia ou da noite, sem filas de espera ou frustrações!</li>
-        <li>**Mais vendas:** Aumente suas conversões e exploda suas vendas com um atendimento rápido, eficiente e personalizado.</li>
-        <li>**Clientes apaixonados:** Ofereça uma experiência única e memorável que fideliza seus clientes e transforma vendas em fãs apaixonados!</li>
-        <li>**Produtividade no máximo:** Automatize tarefas repetitivas e libere seu tempo para se dedicar a estratégias de crescimento e inovação.</li>
-        <li>**Seu negócio no comando:** Tenha total controle sobre seus pedidos, promoções e comunicação com os clientes, tudo em um só lugar.</li>
-      </ul>
-    </section>
-    <section class="mais">
-      <h3>E tem mais!</h3>
-      <ul>
-        <li>**Visão fofa e amigável:** Um personagem de açaí animado que encanta seus clientes e torna a interação mais divertida.</li>
-        <li>**Fácil de usar:** Plataforma intuitiva e descomplicada, ideal para vendedores de todos os tamanhos e níveis de experiência.</li>
-        <li>**Planos flexíveis:** Escolha o plano que melhor se encaixa nas suas necessidades e orçamento, com opções gratuitas e pagas.</li>
-      </ul>
-    </section>
-    <section class="chamada">
-      <h2>O Açaibot é a chave para o sucesso do seu negócio de açaí!</h2>
-      <p>Comece agora mesmo a construir a experiência de atendimento que seus clientes merecem e dispare suas vendas!</p>
-<div class="flex">
-  <a href="https://infoprodutos.org/açaibot">Acesse o site da Infoprodutos.org e explore todas as vantagens do Açaibot!</a>
-  <img id="logoAcai" src="static/logo Acai.png" alt="">
-</div>
-    </section>
-    <footer>
-      <p>Açaibot: atendimento impecável, vendas em alta e o futuro do seu negócio de açaí!</p>
-      <ul>
-        <li>#açaibot</li>
-        <li>#atendimento247</li>
-        <li>#vendasdeaçai</li>
-        <li>#sucessonoaçai</li>
-        <li>#futurodoaçai</li>
-      </ul>
-      <video src="static/rodape.mp4" autoplay muted loop></video>
-    </footer>
-  </body>
+  </header>
+  <section class="problema">
+    <h2>Cansado de perder vendas por falta de tempo para atender seus clientes?</h2>
+    <p>O Açaibot é a solução definitiva para você! A plataforma completa que automatiza seu atendimento via WhatsApp,
+      liberando seu tempo para focar no que realmente importa: expandir seu negócio de açaí!</p>
+  </section>
+  <video src="static/rodape.mp4" autoplay muted loop></video>
+
+  <section class="beneficios">
+    <h3>Com o Açaibot, você garante:</h3>
+    <ul>
+      <li>**Atendimento 24/7:** Seus clientes são atendidos instantaneamente, a qualquer hora do dia ou da noite, sem
+        filas de espera ou frustrações!</li>
+      <li>**Mais vendas:** Aumente suas conversões e exploda suas vendas com um atendimento rápido, eficiente e
+        personalizado.</li>
+      <li>**Clientes apaixonados:** Ofereça uma experiência única e memorável que fideliza seus clientes e transforma
+        vendas em fãs apaixonados!</li>
+      <li>**Produtividade no máximo:** Automatize tarefas repetitivas e libere seu tempo para se dedicar a estratégias
+        de crescimento e inovação.</li>
+      <li>**Seu negócio no comando:** Tenha total controle sobre seus pedidos, promoções e comunicação com os clientes,
+        tudo em um só lugar.</li>
+    </ul>
+  </section>
+  <section class="mais">
+    <h3>E tem mais!</h3>
+    <ul>
+      <li>**Visão fofa e amigável:** Um personagem de açaí animado que encanta seus clientes e torna a interação mais
+        divertida.</li>
+      <li>**Fácil de usar:** Plataforma intuitiva e descomplicada, ideal para vendedores de todos os tamanhos e níveis
+        de experiência.</li>
+      <li>**Planos flexíveis:** Escolha o plano que melhor se encaixa nas suas necessidades e orçamento, com opções
+        gratuitas e pagas.</li>
+    </ul>
+  </section>
+  <section class="chamada">
+    <h2>O Açaibot é a chave para o sucesso do seu negócio de açaí!</h2>
+    <p>Comece agora mesmo a construir a experiência de atendimento que seus clientes merecem e dispare suas vendas!</p>
+    <div class="flex">
+      <a href="https://infoprodutos.org/açaibot">Acesse o site da Infoprodutos.org e explore todas as vantagens do
+        Açaibot!</a>
+      <img id="logoAcai" src="static/logo Acai.png" alt="">
+    </div>
+  </section>
+  <footer>
+    <p>Açaibot: atendimento impecável, vendas em alta e o futuro do seu negócio de açaí!</p>
+    <ul>
+      <li>#açaibot</li>
+      <li>#atendimento247</li>
+      <li>#vendasdeaçai</li>
+      <li>#sucessonoaçai</li>
+      <li>#futurodoaçai</li>
+    </ul>
+  </footer>
+</body>
 
 </html>
