--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       </div>
     </div>
   </header>
+ <div class="inteface">
   <section class="problema">
     <h2>Cansado de perder vendas por falta de tempo para atender seus clientes?</h2>
     <p>O Açaibot é a solução definitiva para você! A plataforma completa que automatiza seu atendimento via WhatsApp,
@@ -73,6 +74,15 @@
         tudo em um só lugar.</li>
     </ul>
   </section>
+  <section class="chamada">
+    <h2>O Açaibot é a chave para o sucesso do seu negócio de açaí!</h2>
+    <p>Comece agora mesmo a construir a experiência de atendimento que seus clientes merecem e dispare suas vendas!</p>
+    <div class="flex" style="width: 100%;">
+      <a href="https://infoprodutos.org/açaibot">Acesse o site da Infoprodutos.org e explore todas as vantagens do
+        Açaibot!</a>
+      <img id="logoAcai" src="static/logo Acai.png" alt="">
+    </div>
+  </section>
   <section class="mais">
     <h3>E tem mais!</h3>
     <ul>
@@ -84,16 +94,7 @@
         gratuitas e pagas.</li>
     </ul>
   </section>
-  <video src="static/rodape.mp4" autoplay muted loop></video>
-  <section class="chamada">
-    <h2>O Açaibot é a chave para o sucesso do seu negócio de açaí!</h2>
-    <p>Comece agora mesmo a construir a experiência de atendimento que seus clientes merecem e dispare suas vendas!</p>
-    <div class="flex">
-      <a href="https://infoprodutos.org/açaibot">Acesse o site da Infoprodutos.org e explore todas as vantagens do
-        Açaibot!</a>
-      <img id="logoAcai" src="static/logo Acai.png" alt="">
-    </div>
-  </section>
+ </div>
   <footer>
     <p>Açaibot: atendimento impecável, vendas em alta e o futuro do seu negócio de açaí!</p>
     <ul>
@@ -104,6 +105,7 @@
       <li>#futurodoaçai</li>
     </ul>
   </footer>
+  <video src="static/rodape.mp4" autoplay muted loop></video>
 </body>
 
 </html>
