--- a/index.html
+++ b/index.html
@@ -10,103 +10,141 @@
 </head>
 
 <body>
-  <header>
-
-  </header>
- <div class="inteface">
-  <h3>Açaibot</h3>
-  <div class="flex-mobile" style="margin: auto;">
-    <div>
-      <h3 style="font-size: xx-large;">Revolucione seu negócio de açaí com atendimento 24/7 e explosão nas vendas!
+  <div class="inteface">
+    <header>
+      <h3 style="font-size: xx-large; max-width: 80%;">
+        Revolucione seu negócio de açaí com atendimento 24 hrs.
       </h3>
-      <img id="logoAcai" src="static/logo Acai.png" alt="">
-
-    </div>
-    <div style="max-width: 500px;">
-      <h1>Teste o AÇAI BOT sem pagar nada</h1>
-      <p>Faça o seu cadastro para testar a Anota AI</p>
-      <form action="#">
-        <ul>
-          <label for="nome">Nome:
-            <input type="text" id="nome" name="nome" placeholder="Digite seu nome">
-          </label>
-          <label for="email">Email:
-            <input type="email" id="email" name="email" placeholder="Digite seu email">
-          </label>
-          <label for="celular">Celular:
-            <input type="tel" id="celular" name="celular" placeholder="Digite seu celular">
-          </label>
-          <label for="nome_delivery">Nome do seu delivery:
-            <input type="text" id="nome_delivery" name="nome_delivery" placeholder="Digite o nome do seu delivery">
-          </label>
-          <label for="quantidade_pedidos">Quantidade de pedidos por dia:
-            <select id="quantidade_pedidos" name="quantidade_pedidos">
-              <option value="menos_10">Menos de 10</option>
-              <option value="mais_10">Mais de 10</option>
-            </select>
-          </label>
-          </li>
-          <label for="computador">Já tem computador ou notebook?
-            <input type="radio" id="computador_sim" name="computador" value="sim" checked> Sim
-            <input type="radio" id="computador_nao" name="computador" value="nao"> Não
-          </label>
-        </ul>
-        <button type="submit">Enviar</button>
-      </form>
-    </div>
-  </div>
-  <section class="problema">
-    <h2>Cansado de perder vendas por falta de tempo para atender seus clientes?</h2>
-    <p>O Açaibot é a solução definitiva para você! A plataforma completa que automatiza seu atendimento via WhatsApp,
-      liberando seu tempo para focar no que realmente importa: expandir seu negócio de açaí!</p>
-  </section>
-  <section class="beneficios">
-    <h3>Com o Açaibot, você garante:</h3>
-    <ul>
-      <li>**Atendimento 24/7:** Seus clientes são atendidos instantaneamente, a qualquer hora do dia ou da noite, sem
-        filas de espera ou frustrações!</li>
-      <li>**Mais vendas:** Aumente suas conversões e exploda suas vendas com um atendimento rápido, eficiente e
-        personalizado.</li>
-      <li>**Clientes apaixonados:** Ofereça uma experiência única e memorável que fideliza seus clientes e transforma
-        vendas em fãs apaixonados!</li>
+      <picture id="logoAcai">
+        <img class="logoAcai" src="static/logo Acai.png" alt="">
+        <li>
+          Explosão nas vendas!
+        </li>
+      </picture>
+      <p>
+        Faça o seu cadastro para testar nosso Time boot IA
+      </p>
+      <h1>
+        Teste o AÇAI BOT sem pagar nada
+      </h1>
+      <div class="flex-mobile" style="margin: auto;">
+        <div style="max-width: 500px;">
+          <form action="#">
+            <ul>
+              <label for="nome_delivery">
+                <p>
+                  Nome:
+                </p>
+                <input type="text" id="nome_delivery" name="nome_delivery" placeholder="Digite o nome do seu delivery">
+              </label>
+              <label for="email">
+                <p>
+                  Email:
+                </p>
+                <input type="email" id="email" name="email" placeholder="Digite seu email">
+              </label>
+              <label for="celular">
+                <p>
+                  Celular:
+                </p>
+                <input type="tel" id="celular" name="celular" placeholder="Digite seu celular">
+              </label>
+              <label for="quantidade_pedidos">
+                <p>
+                  Quantidade de pedidos por dia:
+                </p>
+                <br>
+              </label>
+              <select id="quantidade_pedidos" name="quantidade_pedidos">
+                <option value="menos_10">Menos de 10</option>
+                <option value="mais_10">Mais de 10</option>
+              </select>
+              </li>
+              <label for="computador">
+                <p>
+                  Já tem computador ou notebook?
+                </p>
+                      </label>
+                      <input type="radio" id="computador_sim" name="computador" value="sim" checked> 
+                      Sim
+                      <input type="radio" id="computador_nao" name="computador" value="nao">
+                       Não
+                      <button type="submit">Enviar</button>
+            </ul>
+          </form>
+        </div>
+      </div>
+    </header>
+    <section class="problema">
+      <h2>Cansado de perder vendas por falta de tempo para atender seus clientes?</h2>
+      <p>O Açaibot é a solução definitiva para você! A plataforma completa que automatiza seu atendimento via WhatsApp,
+        liberando seu tempo para focar no que realmente importa: expandir seu negócio de açaí!</p>
+    </section>
+    <section class="beneficios">
+      <h3>Com o Açaibot, você garante:</h3>
+      <li>
+        **Atendimento 24/7:** Seus clientes são atendidos instantaneamente, a qualquer hora do dia ou da noite, sem
+        filas de espera ou frustrações!
+      </li>
+      <li>
+        **Mais vendas:** Aumente suas conversões e exploda suas vendas com um atendimento rápido, eficiente e
+        personalizado.
+      </li>
+      <li>
+        **Clientes apaixonados:** Ofereça uma experiência única e memorável que fideliza seus clientes e transforma
+        vendas em fãs apaixonados!
+      </li>
       <li>**Produtividade no máximo:** Automatize tarefas repetitivas e libere seu tempo para se dedicar a estratégias
-        de crescimento e inovação.</li>
-      <li>**Seu negócio no comando:** Tenha total controle sobre seus pedidos, promoções e comunicação com os clientes,
-        tudo em um só lugar.</li>
-    </ul>
-  </section>
-  <section class="chamada">
-    <h2>O Açaibot é a chave para o sucesso do seu negócio de açaí!</h2>
-    <p>Comece agora mesmo a construir a experiência de atendimento que seus clientes merecem e dispare suas vendas!</p>
-    <div class="flex" style="width: 100%;">
-      <a href="https://infoprodutos.org/açaibot">Acesse o site da Infoprodutos.org e explore todas as vantagens do
-        Açaibot!</a>
-      <img id="logoAcai" src="static/logo Acai.png" alt="">
-    </div>
-  </section>
-  <section class="mais">
-    <h3>E tem mais!</h3>
-    <ul>
-      <li>**Visão fofa e amigável:** Um personagem de açaí animado que encanta seus clientes e torna a interação mais
-        divertida.</li>
-      <li>**Fácil de usar:** Plataforma intuitiva e descomplicada, ideal para vendedores de todos os tamanhos e níveis
-        de experiência.</li>
-      <li>**Planos flexíveis:** Escolha o plano que melhor se encaixa nas suas necessidades e orçamento, com opções
-        gratuitas e pagas.</li>
-    </ul>
-  </section>
- </div>
-  <footer>
-    <p>Açaibot: atendimento impecável, vendas em alta e o futuro do seu negócio de açaí!</p>
-    <ul>
-      <li>#açaibot</li>
-      <li>#atendimento247</li>
-      <li>#vendasdeaçai</li>
-      <li>#sucessonoaçai</li>
-      <li>#futurodoaçai</li>
-    </ul>
-  </footer>
-  <video src="static/rodape.mp4" autoplay muted loop></video>
+        de crescimento e inovação.
+      </li>
+      <li>
+        **Seu negócio no comando:** Tenha total controle sobre seus pedidos, promoções e comunicação com os
+        clientes,
+        tudo em um só lugar.
+      </li>
+      <h3>
+        E tem mais!
+      </h3>
+      <ul>
+        <li>
+          **Visão fofa e amigável:** Um personagem de açaí animado que encanta seus clientes e torna a interação mais
+          divertida.
+        </li>
+        <li>
+          **Fácil de usar:** Plataforma intuitiva e descomplicada, ideal para vendedores de todos os tamanhos e níveis
+          de experiência.
+        </li>
+        <li>
+          **Planos flexíveis:** Escolha o plano que melhor se encaixa nas suas necessidades e orçamento, com opções
+          gratuitas e pagas.
+        </li>
+      </ul>
+    </section>
+    <section class="chamada">
+      <h2>
+        O Açaibot é a chave para o sucesso do seu negócio de açaí!
+      </h2>
+      <p>
+        Comece agora mesmo a construir a experiência de atendimento que seus clientes merecem e dispare suas vendas!
+      </p>
+      <a href="https://infoprodutos.org/açaibot">
+        Acesse o site da Infoprodutos.org e explore todas as vantagens do
+        Açaibot!
+      </a>
+      <img class="logoAcai" src="static/logo Acai.png" alt="">
+    </section>
+    <footer>
+      <p>Açaibot: atendimento impecável, vendas em alta e o futuro do seu negócio de açaí!</p>
+      <ul>
+        <li>#açaibot</li>
+        <li>#atendimento247</li>
+        <li>#vendasdeaçai</li>
+        <li>#sucessonoaçai</li>
+        <li>#futurodoaçai</li>
+      </ul>
+    </footer>
+    <video src="static/rodape.mp4" autoplay muted loop></video>
+  </div>
 </body>
 
 </html>
