--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 <body>
   <div class="inteface">
     <header>
-      <h3 style="font-size: xx-large; max-width: 80%;">
-        Revolucione seu negócio de açaí com atendimento 24 hrs.
-      </h3>
       <picture id="logoAcai">
         <img class="logoAcai" src="static/logo Acai.png" alt="">
         <li>
@@ -24,62 +21,65 @@
       <p>
         Faça o seu cadastro para testar nosso Time boot IA
       </p>
-      <h1>
-        Teste o AÇAI BOT sem pagar nada
-      </h1>
-      <div class="flex-mobile" style="margin: auto;">
-        <div style="max-width: 500px;">
-          <form action="#">
-            <ul>
-              <label for="nome_delivery">
-                <p>
-                  Nome:
-                </p>
-                <input type="text" id="nome_delivery" name="nome_delivery" placeholder="Digite o nome do seu delivery">
-              </label>
-              <label for="email">
-                <p>
-                  Email:
-                </p>
-                <input type="email" id="email" name="email" placeholder="Digite seu email">
-              </label>
-              <label for="celular">
-                <p>
-                  Celular:
-                </p>
-                <input type="tel" id="celular" name="celular" placeholder="Digite seu celular">
-              </label>
-              <label for="quantidade_pedidos">
-                <p>
-                  Quantidade de pedidos por dia:
-                </p>
-                <br>
-              </label>
-              <select id="quantidade_pedidos" name="quantidade_pedidos">
-                <option value="menos_10">Menos de 10</option>
-                <option value="mais_10">Mais de 10</option>
-              </select>
-              </li>
-              <label for="computador">
-                <p>
-                  Já tem computador ou notebook?
-                </p>
-                      </label>
-                      <input type="radio" id="computador_sim" name="computador" value="sim" checked> 
-                      Sim
-                      <input type="radio" id="computador_nao" name="computador" value="nao">
-                       Não
-                      <button type="submit">Enviar</button>
-            </ul>
-          </form>
-        </div>
-      </div>
-    </header>
+          </header>
     <section class="problema">
       <h2>Cansado de perder vendas por falta de tempo para atender seus clientes?</h2>
       <p>O Açaibot é a solução definitiva para você! A plataforma completa que automatiza seu atendimento via WhatsApp,
         liberando seu tempo para focar no que realmente importa: expandir seu negócio de açaí!</p>
-    </section>
+          </section>
+    <div class="flex-mobile" style="margin: auto;">
+      <h1>
+        Teste o AÇAI BOT sem pagar nada
+      </h1>
+         <div style="max-width: 800px; margin: auto;">
+                <form action="#">
+          <ul>
+            <label for="nome_delivery">
+              <p>
+                Nome:
+              </p>
+              <input type="text" id="nome_delivery" name="nome_delivery" placeholder="Digite o nome do seu delivery">
+            </label>
+            <label for="email">
+              <p>
+                Email:
+              </p>
+              <input type="email" id="email" name="email" placeholder="Digite seu email">
+            </label>
+            <label for="celular">
+              <p>
+                Celular:
+              </p>
+              <input type="tel" id="celular" name="celular" placeholder="Digite seu celular">
+            </label>
+            <label for="quantidade_pedidos">
+              <p>
+                Quantidade de pedidos por dia:
+              </p>
+              <br>
+            </label>
+            <select id="quantidade_pedidos" name="quantidade_pedidos">
+              <option value="menos_10">Menos de 10</option>
+              <option value="mais_10">Mais de 10</option>
+            </select>
+            </li>
+            <label for="computador">
+              <p>
+                Já tem computador ou notebook?
+              </p>
+                    </label>
+                    <input type="radio" id="computador_sim" name="computador" value="sim" checked> 
+                    Sim
+                    <input type="radio" id="computador_nao" name="computador" value="nao">
+                     Não
+                    <button type="submit">Enviar</button>
+          </ul>
+        </form>
+           </div>
+           <h3 style="font-size: xx-large; max-width: 80%;">
+            Revolucione seu negócio com nosso atendimento 24 hrs.
+          </h3>
+    </div>
     <section class="beneficios">
       <h3>Com o Açaibot, você garante:</h3>
       <li>
@@ -131,11 +131,12 @@
         Acesse o site da Infoprodutos.org e explore todas as vantagens do
         Açaibot!
       </a>
-      <img class="logoAcai" src="static/logo Acai.png" alt="">
     </section>
     <footer>
-      <p>Açaibot: atendimento impecável, vendas em alta e o futuro do seu negócio de açaí!</p>
-      <ul>
+      <p>
+        Açaibot: atendimento impecável, vendas em alta e o futuro do seu negócio de açaí!
+      </p>
+      <ul id="ppt">
         <li>#açaibot</li>
         <li>#atendimento247</li>
         <li>#vendasdeaçai</li>
@@ -143,7 +144,6 @@
         <li>#futurodoaçai</li>
       </ul>
     </footer>
-    <video src="static/rodape.mp4" autoplay muted loop></video>
   </div>
 </body>
 
