--- a/index.html
+++ b/index.html
@@ -11,139 +11,145 @@
 
 <body>
   <div class="inteface">
+    <iframe loading="" loop="on" autoplay="on" 
+    style="width: 100%;height: 80vh;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGIx5dMlmU&#x2F;XnhWPVmVmwuAbLvP0AUgOg&#x2F;view?embed"
+    >
+  </iframe>
     <header>
       <picture id="logoAcai">
         <img class="logoAcai" src="static/logo Acai.png" alt="">
-        <li>
-          Explosão nas vendas!
-        </li>
       </picture>
+    </header>
+    <section class="problema">
+      <li>
+        Explosão nas vendas!
+      </li>
       <p>
         Faça o seu cadastro para testar nosso Time boot IA
       </p>
-          </header>
-    <section class="problema">
       <h2>Cansado de perder vendas por falta de tempo para atender seus clientes?</h2>
       <p>O Açaibot é a solução definitiva para você! A plataforma completa que automatiza seu atendimento via WhatsApp,
         liberando seu tempo para focar no que realmente importa: expandir seu negócio de açaí!</p>
-          </section>
-    <div class="flex-mobile" style="margin: auto;">
-      <h1>
-        Teste o AÇAI BOT sem pagar nada
-      </h1>
-         <div style="max-width: 800px; margin: auto;">
-                <form action="#">
-          <ul>
-            <label for="nome_delivery">
-              <p>
-                Nome:
-              </p>
-              <input type="text" id="nome_delivery" name="nome_delivery" placeholder="Digite o nome do seu delivery">
-            </label>
-            <label for="email">
-              <p>
-                Email:
-              </p>
-              <input type="email" id="email" name="email" placeholder="Digite seu email">
-            </label>
-            <label for="celular">
-              <p>
-                Celular:
-              </p>
-              <input type="tel" id="celular" name="celular" placeholder="Digite seu celular">
-            </label>
-            <label for="quantidade_pedidos">
-              <p>
-                Quantidade de pedidos por dia:
-              </p>
-              <br>
-            </label>
-            <select id="quantidade_pedidos" name="quantidade_pedidos">
-              <option value="menos_10">Menos de 10</option>
-              <option value="mais_10">Mais de 10</option>
-            </select>
-            </li>
-            <label for="computador">
-              <p>
-                Já tem computador ou notebook?
-              </p>
-                    </label>
-                    <input type="radio" id="computador_sim" name="computador" value="sim" checked> 
-                    Sim
-                    <input type="radio" id="computador_nao" name="computador" value="nao">
-                     Não
-                    <button type="submit">Enviar</button>
-          </ul>
-        </form>
-           </div>
-           <h3 style="font-size: xx-large; max-width: 80%;">
-            Revolucione seu negócio com nosso atendimento 24 hrs.
-          </h3>
+     
+      <div class="flex-mobile" style="margin: auto;">
+    </section>
+        <div style="max-width: 800px; margin: auto;">
+      <form action="#">
+        <ul>
+          <h1>
+            Teste o AÇAI BOT sem pagar nada
+          </h1>
+          <label for="nome_delivery">
+            <p>
+              Nome:
+            </p>
+            <input type="text" id="nome_delivery" name="nome_delivery" placeholder="Digite o nome do seu delivery">
+          </label>
+          <label for="email">
+            <p>
+              Email:
+            </p>
+            <input type="email" id="email" name="email" placeholder="Digite seu email">
+          </label>
+          <label for="celular">
+            <p>
+              Celular:
+            </p>
+            <input type="tel" id="celular" name="celular" placeholder="Digite seu celular">
+          </label>
+          <label for="quantidade_pedidos">
+            <p>
+              Quantidade de pedidos por dia:
+            </p>
+            <br>
+          </label>
+          <select id="quantidade_pedidos" name="quantidade_pedidos">
+            <option value="menos_10">Menos de 10</option>
+            <option value="mais_10">Mais de 10</option>
+          </select>
+          </li>
+          <label for="computador">
+            <p>
+              Já tem computador ou notebook?
+            </p>
+          </label>
+          <input type="radio" id="computador_sim" name="computador" value="sim" checked>
+          Sim
+          <input type="radio" id="computador_nao" name="computador" value="nao">
+          Não
+          <button type="submit">Enviar</button>
+        </ul>
+      </form>
     </div>
-    <section class="beneficios">
-      <h3>Com o Açaibot, você garante:</h3>
+    <h3 style="font-size: xx-large; max-width: 80%;">
+      Revolucione seu negócio com nosso atendimento 24 hrs.
+    </h3>
+  </div>
+  <section class="beneficios">
+    <h3>Com o Açaibot, você garante:</h3>
+    <li>
+      **Atendimento 24/7:** Seus clientes são atendidos instantaneamente, a qualquer hora do dia ou da noite, sem
+      filas de espera ou frustrações!
+    </li>
+    <li>
+      **Mais vendas:** Aumente suas conversões e exploda suas vendas com um atendimento rápido, eficiente e
+      personalizado.
+    </li>
+    <li>
+      **Clientes apaixonados:** Ofereça uma experiência única e memorável que fideliza seus clientes e transforma
+      vendas em fãs apaixonados!
+    </li>
+    <li>**Produtividade no máximo:** Automatize tarefas repetitivas e libere seu tempo para se dedicar a estratégias
+      de crescimento e inovação.
+    </li>
+    <li>
+      **Seu negócio no comando:** Tenha total controle sobre seus pedidos, promoções e comunicação com os
+      clientes,
+      tudo em um só lugar.
+    </li>
+    <h3>
+      E tem mais!
+    </h3>
+    <ul>
       <li>
-        **Atendimento 24/7:** Seus clientes são atendidos instantaneamente, a qualquer hora do dia ou da noite, sem
-        filas de espera ou frustrações!
+        **Visão fofa e amigável:** Um personagem de açaí animado que encanta seus clientes e torna a interação mais
+        divertida.
       </li>
       <li>
-        **Mais vendas:** Aumente suas conversões e exploda suas vendas com um atendimento rápido, eficiente e
-        personalizado.
+        **Fácil de usar:** Plataforma intuitiva e descomplicada, ideal para vendedores de todos os tamanhos e níveis
+        de experiência.
       </li>
       <li>
-        **Clientes apaixonados:** Ofereça uma experiência única e memorável que fideliza seus clientes e transforma
-        vendas em fãs apaixonados!
+        **Planos flexíveis:** Escolha o plano que melhor se encaixa nas suas necessidades e orçamento, com opções
+        gratuitas e pagas.
       </li>
-      <li>**Produtividade no máximo:** Automatize tarefas repetitivas e libere seu tempo para se dedicar a estratégias
-        de crescimento e inovação.
-      </li>
-      <li>
-        **Seu negócio no comando:** Tenha total controle sobre seus pedidos, promoções e comunicação com os
-        clientes,
-        tudo em um só lugar.
-      </li>
-      <h3>
-        E tem mais!
-      </h3>
-      <ul>
-        <li>
-          **Visão fofa e amigável:** Um personagem de açaí animado que encanta seus clientes e torna a interação mais
-          divertida.
-        </li>
-        <li>
-          **Fácil de usar:** Plataforma intuitiva e descomplicada, ideal para vendedores de todos os tamanhos e níveis
-          de experiência.
-        </li>
-        <li>
-          **Planos flexíveis:** Escolha o plano que melhor se encaixa nas suas necessidades e orçamento, com opções
-          gratuitas e pagas.
-        </li>
-      </ul>
-    </section>
-    <section class="chamada">
-      <h2>
-        O Açaibot é a chave para o sucesso do seu negócio de açaí!
-      </h2>
-      <p>
-        Comece agora mesmo a construir a experiência de atendimento que seus clientes merecem e dispare suas vendas!
-      </p>
-      <a href="https://infoprodutos.org/açaibot">
-        Acesse o site da Infoprodutos.org e explore todas as vantagens do
-        Açaibot!
-      </a>
-    </section>
-    <footer>
-      <p>
-        Açaibot: atendimento impecável, vendas em alta e o futuro do seu negócio de açaí!
-      </p>
-      <ul id="ppt">
-        <li>#açaibot</li>
-        <li>#atendimento247</li>
-        <li>#vendasdeaçai</li>
-        <li>#sucessonoaçai</li>
-        <li>#futurodoaçai</li>
-      </ul>
-    </footer>
+    </ul>
+  </section>
+  <section class="chamada">
+    <h2>
+      O Açaibot é a chave para o sucesso do seu negócio de açaí!
+    </h2>
+    <p>
+      Comece agora mesmo a construir a experiência de atendimento que seus clientes merecem e dispare suas vendas!
+    </p>
+    <a href="https://infoprodutos.org/açaibot">
+      Acesse o site da Infoprodutos.org e explore todas as vantagens do
+      Açaibot!
+    </a>
+  </section>
+  <footer>
+    <p>
+      Açaibot: atendimento impecável, vendas em alta e o futuro do seu negócio de açaí!
+    </p>
+    <ul id="ppt">
+      <li>#açaibot</li>
+      <li>#atendimento247</li>
+      <li>#vendasdeaçai</li>
+      <li>#sucessonoaçai</li>
+      <li>#futurodoaçai</li>
+    </ul>
+  </footer>
   </div>
 </body>
 
