--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
 
 <body>
   <div class="inteface">
-    <iframe loading="" loop="on" autoplay="on" 
-    style="width: 100%;height: 80vh;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGIx5dMlmU&#x2F;XnhWPVmVmwuAbLvP0AUgOg&#x2F;view?embed"
-    >
-  </iframe>
-    <header>
-      <picture id="logoAcai">
-        <img class="logoAcai" src="static/logo Acai.png" alt="">
-      </picture>
-    </header>
+    <picture id="logoAcai">
+      <img class="logoAcai" src="static/logo Acai.png" alt="">
+    </picture>
+<video muted loop autoplay>
+  <source media="(min-width: 501px)" src="static/AÇAI BOT.mp4" style="video::internal-media-controls{display: ;}" >
+  <source media="(min-width: 500px)" src="static/AÇAI BOT mobille.mp4" style="video::internal-media-controls{display: ;}" >
+</video>  
+  <header>
+        </header>
     <section class="problema">
       <li>
         Explosão nas vendas!
