--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 
 <body>
   <div class="inteface">
-    <header>
+    <header>      
       <video muted loop autoplay>
         <source media="(min-width: 501px)" src="static/AÇAI BOT.mp4" style="video::internal-media-controls{display: ;}">
         <source media="(max-width: 500px)" src="static/AÇAI BOT mobille.mp4"
           style="video::internal-media-controls{display: ;}">
-      </video>
+      </video>    
       <picture id="logoAcai">
         <img class="logoAcai" src="static/logo Acai.png" alt="">
-      </picture>
-      <div style="max-width: 800px; margin: auto;">
+      </picture>  
+    <section id="secHeader" style="display: block;">
+        <div style="max-width: 800px; margin: auto; display: block;">
         <form action="#">
           <ul>
             <h1>
@@ -68,7 +69,10 @@
           </ul>
         </form>
       </div>
+    </section>
     </header>
+
+
     <section class="problema">
       <li>
         Explosão nas vendas!
@@ -80,7 +84,6 @@
       <p>O Açaibot é a solução definitiva para você! A plataforma completa que automatiza seu atendimento via WhatsApp,
         liberando seu tempo para focar no que realmente importa: expandir seu negócio de açaí!</p>
     </section>
-  
       <section class="beneficios">
         <h3 style="font-size: xx-large; max-width: 80%;">
           Revolucione seu negócio com nosso atendimento 24 hrs.
