--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
   <div class="inteface">
+    <picture id="whatsapp" style="position: fixed; bottom: 0;">
+      <a href="https://maper.info/29j736">
+        <img src="static/btnWhatsapp.png" style="display: block; max-width: 15%; margin: 15px;">
+      </a>
+    </picture>
     <header>
-      <video muted loop autoplay>
-        <source media="(min-width: 501px)" src="static/AÇAI BOT.mp4" style="video::internal-media-controls{display: ;}">
-        <source media="(max-width: 500px)" src="static/AÇAI BOT mobille.mp4"
-          style="video::internal-media-controls{display: ;}">
-      </video>
       <picture id="logoAcai">
         <img class="logoAcai" src="static/logo Acai.png" alt="">
       </picture>
@@ -66,16 +66,17 @@
               <input type="radio" id="computador_nao" name="computador" value="nao">
               Não
               <button type="submit">
-              <a
-                href="mailto:pablokennediy@gmail.com?subject=Solitando+suporte+em+Bot+A%C3%A7ai&body=Descreva+brevemente+qual+servi%C3%A7o+deseja+solicitar">
-                Enviar
-              </a>
-            </button>
+                <a
+                  href="mailto:pablokennediy@gmail.com?subject=Solitando+suporte+em+Bot+A%C3%A7ai&body=Descreva+brevemente+qual+servi%C3%A7o+deseja+solicitar">
+                  Enviar
+                </a>
+              </button>
             </ul>
           </form>
         </div>
       </section>
     </header>
+
     <section class="problema">
       <li>
         Explosão nas vendas!
@@ -142,11 +143,16 @@
         Açaibot!
       </a>
     </section>
+    <video muted loop autoplay>
+      <source media="(min-width: 501px)" src="static/AÇAI BOT.mp4" style="video::internal-media-controls{display: ;}">
+      <source media="(max-width: 500px)" src="static/AÇAI BOT mobille.mp4"
+        style="video::internal-media-controls{display: ;}">
+    </video>
     <footer>
       <p>
         Açaibot: atendimento impecável, vendas em alta e o futuro do seu negócio de açaí!
       </p>
-      <ul id="ppt">
+      <ul id="ppt" style="float: right;">
         <li>#açaibot</li>
         <li>#atendimento247</li>
         <li>#vendasdeaçai</li>
